k8s/kosarica-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kosarica-microservice-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kosarica-microservice
  template:
    metadata:
      labels:
        app: kosarica-microservice
    spec:
      containers:
        - image: divjad123/rso-kosarica-microservice:latest
          name: kosarica-microservice
          ports:
            - containerPort: 8080
              name: server
              protocol: TCP
      restartPolicy: Always

---

apiVersion: v1
kind: Service
metadata:
  name: kosarica-microservice
spec:
  type: LoadBalancer
  ports:
    - port: 8080
      protocol: TCP
      targetPort: server
  selector:
    app: kosarica-microservice
