k8s/izdelki-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: izdelki-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: izdelki-service
  template:
    metadata:
      labels:
        app: izdelki-service
    spec:
      containers:
        - image: zigadrab/rso-izdelki-service
          name: izdelki-service
          ports:
            - containerPort: 8080
              name: server
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /health/live
              port: server
            initialDelaySeconds: 20
            periodSeconds: 3
          readinessProbe:
            httpGet:
              path: /health/ready
              port: server
            initialDelaySeconds: 20
            periodSeconds: 3
---

apiVersion: v1
kind: Service
metadata:
  name: izdelki-service

spec:
  ports:
    - name: server
      port: 8080
      targetPort: server

  selector:
    app: izdelki-service
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: izdelki-ingress
  annotations:
    traefik.ingress.kubernetes.io/router.middlewares: default-example@kubernetescrd
spec:
  rules:
    - http:
        paths:
          - path: /rso/izdelki
            pathType: Prefix
            backend:
              service:
                name: izdelki-service
                port:
                  name: server
