k8s/test-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kosarica-microservice-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kosarica-microservice
  template:
    metadata:
      labels:
        app: kosarica-microservice
    spec:
      containers:
        - image: divjad123/rso-kosarica-microservice:2022-12-01-15
          name: kosarica-microservice
          ports:
            - containerPort: 8080
              name: server
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /health/live
              port: server
            initialDelaySeconds: 20
            periodSeconds: 3
          readinessProbe:
            httpGet:
              path: /health/ready
              port: server
            initialDelaySeconds: 20
            periodSeconds: 3
---

apiVersion: v1
kind: Service
metadata:
  name: kosarica-microservice

spec:
  ports:
    - name: server
      port: 8080
      targetPort: server

  selector:
    app: kosarica-microservice
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kosarica-ingress
  annotations:
    traefik.ingress.kubernetes.io/router.middlewares: default-example@kubernetescrd
spec:
  rules:
    - http:
        paths:
          - path: /rso/kosarica
            pathType: Prefix
            backend:
              service:
                name: kosarica-microservice
                port:
                  name: server
