k8s/valute-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: valute-microservice-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: valute-microservice
  template:
    metadata:
      labels:
        app: valute-microservice
    spec:
      containers:
        - image: divjad123/rso-valute-microservice:latest
          name: kosarica-microservice
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
              name: server
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /health/live
              port: server
            initialDelaySeconds: 20
            periodSeconds: 3
          readinessProbe:
            httpGet:
              path: /health/ready
              port: server
            initialDelaySeconds: 20
            periodSeconds: 3
---

apiVersion: v1
kind: Service
metadata:
  name: valute-microservice

spec:
  ports:
    - name: server
      port: 8080
      targetPort: server

  selector:
    app: valute-microservice
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: valute-ingress
  annotations:
    traefik.ingress.kubernetes.io/router.middlewares: default-example@kubernetescrd
spec:
  rules:
    - http:
        paths:
          - path: /rso/valute
            pathType: Prefix
            backend:
              service:
                name: valute-microservice
                port:
                  name: server
